--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/app.js",
-    "dev": "nodemon dist/app.js",
+    "start": "node dist/server.js",
+    "dev": "nodemon dist/server.js",
     "watch": "tsc -w"
   },
   "keywords": [],
