--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "joi": "^17.13.3",
     "mongoose": "^8.9.3",
     "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/joi": "^17.2.3",
     "@types/node": "^22.10.5",
     "@types/validator": "^13.12.2",
     "nodemon": "^3.1.9",
